java 1.8 + add access token & client id